--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "axios": "^0.19.2",
     "vue": "^2.5.2",
     "vue-axios": "^2.1.5",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuetify": "^2.2.25"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
